Fix overflow on body for osx attempt 2

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -29,7 +29,8 @@ body {
   display: flex;
   height: 100vh;
   flex-direction: column;
-  overflow-y: hidden;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 h1 {
@@ -176,8 +177,9 @@ body .arcs {
   -webkit-mask-size: 100% 80%;
   -webkit-mask-position-x: 50%;
   height: 100vh;
-  width: 400px;
   margin: 40px auto;
+  max-width: 400px;
+  width: 100%;
 
   background-color: var(--grey-light-color);
   min-height: 100vh;
